# GapTrace

./: .devcontainerignore  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  README.md  docker-compose.dev.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
gaptrace/: cli.py  function_parser.py  gap_detector.py  scanner.py  test_parser.py
gaptrace/analyzer/: __init__.py  gap_analyzer.py
gaptrace/coverage/: __init__.py  lcov_reader.py
gaptrace/docs/: gaptrace_arch.md
gaptrace/llm/: __init__.py  base_client.py  mock_client.py  openai_client.py
gaptrace/models/: __init__.py  decision_point.py
gaptrace/parser/: __init__.py  ast_parser.py
gaptrace/sample_project/: example.cpp  example.gaptrace.json  example.info  math.cpp  math_test.cpp
