[project]
name = "gaptrace"
version = "0.1.0"
dependencies = [
    "typer",          # CLI framework
    "rich",           # Terminal formatting
    "clang==11.0",    # AST parsing (libclang Python bindings, pinned to LLVM 11)
    "openai",         # LLM integration
]

[project.scripts]
gaptrace = "gaptrace.cli:main"